--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
+    restart: unless-stopped
     volumes:
       - './data:/var/lib/grafana'
     ports:
@@ -13,6 +14,7 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
+    restart: unless-stopped
     volumes:
       - ./prometheus/config.yaml:/etc/prometheus/prometheus.yml
     ports:
@@ -21,6 +23,7 @@ services:
   loki:
     image: grafana/loki:latest
     container_name: loki
+    restart: unless-stopped
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
@@ -30,6 +33,7 @@ services:
   promtail:
     image: grafana/promtail:latest
     container_name: promtail
+    restart: unless-stopped
     command: -config.file=/etc/promtail/config.yaml
     volumes:
       - ./promtail/config.yaml:/etc/promtail/config.yaml
@@ -39,6 +43,7 @@ services:
   jaeger:
     image: jaegertracing/jaeger:latest
     container_name: jaeger
+    restart: unless-stopped
     environment:
       - COLLECTOR_OTLP_ENABLED=true
     ports:
@@ -51,6 +56,7 @@ services:
   cadvisor:
     container_name: cadvisor
     image: gcr.io/cadvisor/cadvisor:latest
+    restart: unless-stopped
     command:
       - --disable_metrics=disk,referenced_memory
     volumes:
@@ -65,6 +71,7 @@ services:
 
   true-tech-server:
     container_name: true-tech-server
+    restart: unless-stopped
     build:
       context: ../test-service
       dockerfile: docker/server/Dockerfile
@@ -80,12 +87,13 @@ services:
     deploy:
       resources:
         limits:
-          memory: 50M
+          memory: 10M
         reservations:
-          memory: 50M
+          memory: 10M
 
   true-tech-client:
     container_name: true-tech-client
+    restart: unless-stopped
     build:
       context: ../test-service
       dockerfile: docker/client/Dockerfile
@@ -97,4 +105,4 @@ services:
       - PPROF_ADDRESS=:9092
       - PROMETHEUS_ADDRESS=:9093
       - TRACE_COLLECTOR=http://jaeger:14268/api/traces
-      - CLIENT_INTERVAL=5ms
+      - CLIENT_INTERVAL=1s
